--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[common]
+build_flags = 
+	-D VERSION=0.1.2
+	-D DEBUG=1
+lib_deps_builtin = 
+	Wire
+
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	locple/LiquidCrystal I2C Multilingual@^2.0.2
+	gyverlibs/GyverFilters@^3.2
+	gyverlibs/GyverNTC@^1.5.5
+
+
